--- a/alcs-frontend/src/app/features/application/staff-journal/staff-journal-note/staff-journal-note.component.html
+++ b/alcs-frontend/src/app/features/application/staff-journal/staff-journal-note/staff-journal-note.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="note" class="comment">
+<div *ngIf="note" class="note">
   <div class="body">
     <div class="made-by label-text">{{ note.author }}</div>
     <div *ngIf="isEditing">
