--- a/alcs-frontend/src/app/features/application/staff-journal/staff-journal-note-input/staff-journal-note-input.component.html
+++ b/alcs-frontend/src/app/features/application/staff-journal/staff-journal-note-input/staff-journal-note-input.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <mat-form-field class="comment-input" appearance="fill">
+  <mat-form-field class="note-input" appearance="fill">
     <mat-label [hidden]="!labelText">{{ labelText }}</mat-label>
     <textarea #textarea cdkTextareaAutosize [(ngModel)]="note.body" [disabled]="isSaving" matInput></textarea>
   </mat-form-field>
