--- a/alcs-frontend/src/app/features/application/staff-journal/staff-journal.component.html
+++ b/alcs-frontend/src/app/features/application/staff-journal/staff-journal.component.html
@@ -1,8 +1,8 @@
-<div class="comments">
+<div class="notes">
   <h5>Staff journal notes ({{ notes.length }})</h5>
   <div *ngIf="!isEditing">
     <mat-form-field class="placeholder-input" appearance="outline" (click)="onEdit()">
-      <input matInput placeholder="Add a note..." />
+      <input matInput placeholder="Add a journal note" />
     </mat-form-field>
   </div>
 
@@ -12,7 +12,7 @@
     [note]="note"
     (cancel)="onCancel()"
     [isNewNote]="true"
-    labelText="Add a note"
+    labelText="Add a journal note"
   />
 
   <app-staff-journal-note
