--- a/alcs-frontend/src/app/features/application/overview/overview.component.html
+++ b/alcs-frontend/src/app/features/application/overview/overview.component.html
@@ -8,7 +8,7 @@
   ></app-inline-edit>
 </section>
 <section>
-  <app-staff-journal *ngIf="application" [applicationUuid]="application.uuid" [fileNumber]="application.fileNumber" />
+  <app-staff-journal *ngIf="application" [applicationUuid]="application.uuid" />
 </section>
 <section>
   <h5>Application Event Timeline</h5>
