Code Review Feedback

--- a/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/documents/document-upload-dialog/document-upload-dialog.component.html
@@ -1,7 +1,7 @@
 <div mat-dialog-title>
   <h4>{{ title }} Document</h4>
 </div>
-<div mat-dialog-content class="holiday-dialog">
+<div mat-dialog-content>
   <form class="form" [formGroup]="form">
     <div class="double">
       <div>
