Map source and use to hide payment info
* Show error toast when application fails to update
* Use NgMask for better input control

--- a/alcs-frontend/src/app/shared/inline-number/inline-number.component.html
+++ b/alcs-frontend/src/app/shared/inline-number/inline-number.component.html
@@ -19,7 +19,9 @@
         <input
           matInput
           class="editable"
-          type="number"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="99999999"
           name="value"
           [placeholder]="placeholder"
           #editInput
