--- a/alcs-frontend/src/app/features/application/intake/intake.component.html
+++ b/alcs-frontend/src/app/features/application/intake/intake.component.html
@@ -7,7 +7,7 @@
       (save)="updateApplicationDate('dateSubmittedToAlc', $event)"
     ></app-inline-datepicker>
   </div>
-  <div>
+  <div *ngIf='application?.source === "APPLICANT"'>
     <h5>Payment</h5>
     <div class="payment-section">
       <div>
