--- a/portal-frontend/src/app/features/edit-application/edit-application.component.scss
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.scss
@@ -14,7 +14,10 @@
   }
 
   .change-app-type-btn-wrapper {
-    margin: rem(16) 0;
+    display: flex;
+    button {
+      margin: rem(16) 0 rem(16) rem(16) !important;
+    }
 
     .mat-icon {
       vertical-align: middle;
