Update Evidentiary Record to use VIsibility Flags
Evidentiary record now shows records with C visibility flag

--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -10,9 +10,5 @@
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
 </section>
 <section>
-  <app-document
-    [fileNumber]="fileNumber"
-    [documentType]="DOCUMENT_TYPE.OTHER"
-    title="Evidentiary Record"
-  ></app-document>
+  <app-document [fileNumber]="fileNumber" [visibilityFlags]="['C']" title="Evidentiary Record"></app-document>
 </section>
