--- a/alcs-frontend/src/app/shared/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.html
@@ -2,16 +2,14 @@
   <div>
     <h4>{{ title }}</h4>
   </div>
-  <div *ngIf="!readOnly">
-    <input hidden type="file" #file (change)="uploadFile($event)" placeholder="Upload file" />
-    <button mat-flat-button color="primary" [disabled]="isUploading" (click)="file.click()">
-      <mat-spinner class="spinner" diameter="20" *ngIf="isUploading"></mat-spinner>
-      {{ isUploading ? 'Uploading' : '+ Add Document' }}
-    </button>
-  </div>
 </div>
 
 <table mat-table [dataSource]="documents" class="mat-elevation-z3 width-100">
+  <ng-container matColumnDef="type">
+    <th mat-header-cell *matHeaderCellDef>Type</th>
+    <td mat-cell *matCellDef="let element">{{ element.type.label }}</td>
+  </ng-container>
+
   <ng-container matColumnDef="fileName">
     <th mat-header-cell *matHeaderCellDef>File Name</th>
     <td mat-cell *matCellDef="let element">
@@ -19,35 +17,20 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="source">
+    <th mat-header-cell *matHeaderCellDef>Source</th>
+    <td mat-cell *matCellDef="let element">{{ element.source }}</td>
+  </ng-container>
+
   <ng-container matColumnDef="uploadedAt">
     <th mat-header-cell *matHeaderCellDef>Upload Date</th>
     <td mat-cell *matCellDef="let element">{{ element.uploadedAt | momentFormat }}</td>
   </ng-container>
 
-  <ng-container matColumnDef="uploadedBy">
-    <th mat-header-cell *matHeaderCellDef>User</th>
-    <td mat-cell *matCellDef="let element">{{ element.uploadedBy }}</td>
-  </ng-container>
-
   <ng-container matColumnDef="action">
     <th mat-header-cell *matHeaderCellDef>Action</th>
     <td mat-cell *matCellDef="let element">
-      <button
-        *ngIf="!readOnly"
-        title="Delete"
-        mat-icon-button
-        class="action-btn delete"
-        (click)="onDelete(element.uuid, element.fileName)"
-      >
-        <mat-icon>delete</mat-icon>
-      </button>
-      <button
-        *ngIf="readOnly"
-        title="Download"
-        mat-icon-button
-        class="action-btn"
-        (click)="onDownload(element.uuid, element.fileName)"
-      >
+      <button title="Download" mat-icon-button class="action-btn" (click)="onDownload(element.uuid, element.fileName)">
         <mat-icon>download</mat-icon>
       </button>
     </td>
