--- a/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
+++ b/alcs-frontend/src/app/features/application/decision/decision-dialog/decision-dialog.component.html
@@ -21,7 +21,7 @@
       <div class="resolution-number-wrapper">
         <mat-form-field appearance="outline" class="date-picker">
           <mat-label>Resolution Number</mat-label>
-          <input matInput formControlName="resolutionNumber" type="number" required />
+          <input matInput formControlName="resolutionNumber" mask="0*" required />
           <span matPrefix>&nbsp;#&nbsp;</span>
         </mat-form-field>
         <div class="center resolution-separator">/</div>
