--- a/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
+++ b/portal-frontend/src/app/features/edit-application/parcel-details/parcel-entry/parcel-entry.component.html
@@ -82,7 +82,15 @@
     <div>
       <label for="map-area">Approx. Map Area (Hectares)</label>
       <mat-form-field class="full-width-input" appearance="outline">
-        <input id="map-area" type="number" matInput placeholder="Enter parcel size" formControlName="mapArea" />
+        <input
+          id="map-area"
+          mask="separator.2"
+          thousandSeparator=","
+          separatorLimit="9999999999"
+          matInput
+          placeholder="Enter parcel size"
+          formControlName="mapArea"
+        />
       </mat-form-field>
       <div *ngIf="mapArea.invalid && (mapArea.dirty || mapArea.touched)" class="field-error">
         <mat-icon>warning</mat-icon>
@@ -294,7 +302,7 @@
       </button>
       <div>
         <app-parcel-owners
-          [fileId]='fileId'
+          [fileId]="fileId"
           [parcelUuid]="parcel.uuid"
           [owners]="parcel.owners"
           (onOwnersUpdated)="onOwnersUpdated.emit()"
