--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -10,5 +10,10 @@
   <app-decision-meeting [fileNumber]="fileNumber"></app-decision-meeting>
 </section>
 <section>
-  <app-document [fileNumber]="fileNumber" [visibilityFlags]="['C']" title="Evidentiary Record"></app-document>
+  <app-document
+    [fileNumber]="fileNumber"
+    [visibilityFlags]="['C']"
+    [sortable]="true"
+    title="Evidentiary Record"
+  ></app-document>
 </section>
