--- a/alcs-frontend/src/app/shared/application-document/application-document.component.html
+++ b/alcs-frontend/src/app/shared/application-document/application-document.component.html
@@ -4,7 +4,13 @@
   </div>
 </div>
 
-<table mat-table [dataSource]="documents" class="mat-elevation-z3 width-100">
+<table
+  cdkDropList
+  (cdkDropListDropped)="onRowDropped($event)"
+  mat-table
+  [dataSource]="dataSource"
+  class="mat-elevation-z3 width-100"
+>
   <ng-container matColumnDef="type">
     <th mat-header-cell *matHeaderCellDef>Type</th>
     <td mat-cell *matCellDef="let element">{{ element.type.label }}</td>
@@ -36,8 +42,21 @@
     </td>
   </ng-container>
 
+  <ng-container matColumnDef="sorting">
+    <th mat-header-cell *matHeaderCellDef></th>
+    <td mat-cell *matCellDef="let element">
+      <mat-icon>drag_indicator</mat-icon>
+    </td>
+  </ng-container>
+
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr
+    style="background-color: #fff"
+    mat-row
+    cdkDrag
+    cdkDragLockAxis="y"
+    *matRowDef="let row; columns: displayedColumns"
+  ></tr>
   <tr class="mat-row" *matNoDataRow>
     <td class="text-center" colspan="4">No files</td>
   </tr>
