Show ownership type label

--- a/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
+++ b/alcs-frontend/src/app/features/application/applicant-info/application-details/parcel/parcel.component.html
@@ -18,7 +18,7 @@
     <div class="full-width subheading1">Parcel Information</div>
     <div class="subheading2 grid-1">Ownership Type</div>
     <div class="grid-double">
-      {{ parcel.ownershipType }}
+      {{ parcel.ownershipType.label }}
     </div>
     <div class="subheading2 grid-1">Legal Description</div>
     <div class="grid-double">
