--- a/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
+++ b/alcs-frontend/src/app/features/application/info-requests/info-requests.component.html
@@ -23,7 +23,7 @@
       <ng-container *ngIf="!element.meetingEndDate">
         <app-inline-datepicker
           class="date-picker"
-          [selectedValue]="undefined"
+          [value]="undefined"
           [min]="element.meetingStartDate | startOfDay"
           (save)="onSaveEndDate(element.uuid, $event)"
         ></app-inline-datepicker>
