--- a/alcs-frontend/src/app/features/application/review/review.component.html
+++ b/alcs-frontend/src/app/features/application/review/review.component.html
@@ -2,7 +2,7 @@
 <div class="notification-date">
   <div class="subheading1">'Ready for Review' Notification Sent to Applicant</div>
   <app-inline-datepicker
-    [selectedValue]="notificationSentDate"
+    [value]="notificationSentDate"
     (save)="onSaveNotificationDate($event)"
   ></app-inline-datepicker>
 </div>
