--- a/alcs-frontend/src/app/features/application/proposal/proposal.component.html
+++ b/alcs-frontend/src/app/features/application/proposal/proposal.component.html
@@ -1,6 +1,6 @@
 <h3>Application Prep</h3>
 <section *ngIf="application?.source === 'APPLICANT'">
-  <h5>Proposal Components</h5>
+  <h5>Proposal Components - {{application?.type?.label}}</h5>
   <div class="input-table">
     <div>
       <div class="subheading2">ALR Area</div>
@@ -37,4 +37,5 @@
       ></app-inline-text>
     </div>
   </div>
+  <app-proposal-nfu *ngIf="application && application.type.code === 'NFUP'"></app-proposal-nfu>
 </section>
