--- a/portal-frontend/src/app/features/edit-application/edit-application.component.html
+++ b/portal-frontend/src/app/features/edit-application/edit-application.component.html
@@ -1,7 +1,7 @@
 <ng-template #header>
   <div class="header">
     <h6 *ngIf="application">Application ID: {{ application.fileNumber }} | {{ application.type }}</h6>
-    <!-- <div class="button-container">
+    <div class="header-btn-wrapper">
       <button
         *ngIf="application?.fileNumber && cdkStepper.selectedIndex === editAppSteps.ReviewAndSubmit"
         mat-flat-button
@@ -10,19 +10,7 @@
       >
         Download PDF
       </button>
-    </div> -->
-    <div class="change-app-type-btn-wrapper">
-      <!-- <div class="button-container">
-        <button
-          *ngIf="application?.fileNumber && cdkStepper.selectedIndex === editAppSteps.ReviewAndSubmit"
-          mat-flat-button
-          color="primary"
-          (click)="onDownloadPdf(application?.fileNumber)"
-        >
-          Download PDF
-        </button>
-      </div> -->
-      <div>
+      <div class="change-app-type-btn-wrapper">
         <button mat-flat-button color="accent" (click)="onApplicationTypeChangeClicked()">
           Change Application Type
         </button>
